--- a/src/content/books/laravel/laravel.mdx
+++ b/src/content/books/laravel/laravel.mdx
@@ -4,35 +4,48 @@ author: {
     name: 'LMDtokyo',
 }
 image: 'assets/banner.png'
-title: 'Laravel tutorial'
-description:  "Hunting down a flag-stealing ransomware group from WolvCTF 2023 with the power of OSINT—from Ethereum breadcrumbs to TF2 workshop maps."
+title: 'Код имени: Она'
+description:  "Захватывающий романтический детектив с элементами психологического триллера и мистики. Где заканчивается реальность и начинается игра?"
 date: 2023-03-17
-tags: ["osint", "compilation"]
-pages: 235
-lang: 'en'
-status: "available"
+tags: ["триллер", "детектив", "фэнтези"]
+pages: 320
+lang: 'ru'
+status: "coming soon"
 draft: false
 ---
 
-## Intro
+# **ВСТУПЛЕНИЕ: "ПОСЛЕДНИЙ ДЕНЬ"**
 
-Hunting down a flag-stealing ransomware group from WolvCTF 2023 with the power of 
-[OSINT—from Ethereum](https://ctftime.org/team/175828) breadcrumbs to TF2 workshop maps.<br/>
-• Seiri, or organization (think “sort” in English). Knowing where things are—using 
-approaches such as suitable naming—is crucial. You think naming identifiers isn’t 
-important? Read on in the following chapters.<br/>
-• Seiton, or tidiness (think “systematize” in English). There is an old American saying: 
-A place for everything, and everything in its place. A piece of code should be where 
-you expect to find it—and, if not, you should re-factor to get it there.<br/>
-• Seiso, or cleaning (think “shine” in English): Keep the workplace free of hanging 
-wires, grease, scraps, and waste. What do the authors here say about littering your 
-code with comments and commented-out code lines that capture history or wishes for 
-the future? Get rid of them.<br/>
-• Seiketsu, or standardization: The group agrees about how to keep the workplace clean. 
-Do you think this book says anything about having a consistent coding style and set of 
-practices within the group? Where do those standards come from? Read on.<br/>
-• Shutsuke, or discipline (self-discipline). This means having the discipline to follow the 
-practices and to frequently reflect on one’s work and be willing to change.
+## **Погружение в хаос**
+Осадки, словно инструмент эмерсивной маскировки, стирают очертания и размывают границы восприятия. Дождевые потоки, проникая в лабиринт переулков, поглощают звуковую информацию, подавляя акустические маркеры происходящего. Природа, как невольный соучастник, стремится дезавуировать этот миг, утопив его в анонимности ночного ландшафта.
 
----
+Фигура мужчины застывает в полумраке; дыхание его прерывисто, грудная клетка содрогается в неконтролируемом ритме — тело адаптируется к физиологическому шоку. Кисти рук инстинктивно напряжены, их слабая дрожь обусловлена не только холодом, но и внезапным осознанием. Влага, текущая по коже, смешивается с жидкостью более высокой вязкости. Кровь. Но чья? Его собственная или чужая? Разграничение утрачено, логика событий размыта.
 
+## **Тень над реальностью**
+Перед ним — неподвижное тело. Оно застыло в позе, свидетельствующей о внезапности гибели, а игра теней делает черты лица неразличимыми, почти виртуальными. Освещение формирует иллюзорные пикселированные контуры, словно это недоработанный рендер симуляционной модели. Однако это не виртуальная среда, а материальная реальность, пусть и лишённая привычной каузальности. Или всё же нет?
+
+Пальцы судорожно сжимают незнакомый объект — холодный, металлический, едва различимый в темноте. Он опускает взгляд, анализирует форму, но идентификация проваливается: когнитивные процессы фрагментированы, память расслаивается на изолированные фрагменты. Вспышки прошлого всплывают в сознании аномально: девушка с тёмно-карими глазами, глубокими, как бездонные омуты. Её голос, низкий и тягучий, проникает в его сознание с абсолютной чёткостью: **"Ты знаешь, кто я."**
+
+## **Призрачные образы**
+Его взгляд не отрывается от тела, но его сознание уже далеко. Он видит вспышками сцены, которые не могут быть реальными. Глаза мёртвого дрогнули? Или ему показалось? Дыхание свистит в груди, лёгкие отказываются наполняться воздухом. Мир начинает вращаться, сцены прошлого и настоящего накладываются друг на друга, заставляя реальность разрушаться и перетекать в искажённые образы. Снова тот голос, её голос, звучащий будто из другого измерения. "Ты не помнишь? Должен был помнить..."
+
+Звуковая атака в виде полицейской сирены разрывает ментальный вакуум, вытесняя героя в текущую хронологическую плоскость. Проблесковые маячки, отразившись в влажном асфальте, образуют кинетические световые вихри. Интуиция сигнализирует о необходимости немедленного перемещения. Но что преследует его? Закон? Истина? Собственное сознание?
+
+## **Мгновение до исчезновения**
+Слуховые галлюцинации усиливаются: голоса — многослойные, полифоничные — ведут диалог внутри его черепной коробки. Их содержание парадоксально: несовпадающие версии произошедшего переплетаются, создавая ментальный диссонанс. Его шаги неуверенны, вестибулярная система поддаётся деформации. Пространство вокруг искажается, как голограмма, застывшая в сбоящем цикле. Сердечный ритм достигает критической амплитуды.
+
+Дождь набирает силу, стекает по его лицу, смывая остатки реальности. Его отражение в луже не повторяет его движений. На мгновение оно замирает, а затем медленно поднимает голову и смотрит на него. Глаза у отражения – чужие. Темнота в них глубже, чем ночь, и в ней что-то мерцает, словно отголоски воспоминаний, которые он не хочет вспоминать. 
+
+И затем — **вспышка**. Оптический сигнал пронизывает его сознание, стирая слои реальности. Исчезает город, исчезает ночь, исчезает всё. Остаётся лишь **пустота**.
+
+Абсолютная тишина.
+
+Затем — **мрак**.
+
+И голос. Собственный.
+
+**"Я помню..."**
+
+Но это ложное утверждение. Или воспоминание существует, но интерпретировано ошибочно?
+
+Разум делает скачок назад. **Месяц назад. К моменту, где инициировалась эта аномалия...**
